@@ -40,6 +40,9 @@ name=die
 # Zhul death
 [event]
 name=die
+	[filter]
+	description=Zhul
+	[/filter]
 
 	[message]
 	speaker=unit
