@@ -171,6 +171,7 @@ ui::ui(display& disp, const std::string& title, const config& cfg, chat& c, conf
 	result_(CONTINUE)
 {
 	const SDL_Rect area = { 0, 0, disp.video().getx(), disp.video().gety() };
+	users_menu_.set_numeric_keypress_selection(false);
 	set_location(area);
 }
 
