@@ -143,6 +143,7 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 		LOG_G << "loading snapshot...\n";
 		starting_pos = gamestate.starting_pos;
 		scenario = &gamestate.snapshot;
+		gamestate.variables = *gamestate.snapshot.child("variables");
 	}
 
 	controller_map controllers;
